kubernetes/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    io.kompose.service: backend
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: backend
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    io.kompose.service: frontend
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: frontend
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    io.kompose.service: postgres
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: postgres
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    io.kompose.service: keycloak
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: keycloak
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    io.kompose.service: minio
spec:
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
  selector:
    io.kompose.service: minio
  type: ClusterIP
